--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
+Thumbs.db
+.DS_Store
+.gradle
+build/
+out/
+.idea
 *.iml
 *.ipr
 *.iws
-.idea
-
-.gradle
-.asscache
-build
-out
-logs
-classes
+.project
+.settings
+.classpath
